--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "whoopsies",
   "version": "0.1.0",
+  "homepage": "http://victornguyen75.github.io/whoopsies",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.2",
@@ -20,6 +21,8 @@
     "lint-fix": "eslint ./src --fix",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -64,6 +67,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "gh-pages": "^3.1.0",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.3",
     "prettier": "^2.2.1",
