--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "homepage": "http://victornguyen75.github.io/whoopsies",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
@@ -10,6 +11,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/react-hooks": "^5.0.3",
     "@testing-library/user-event": "^12.1.10",
+    "aws-sdk": "^2.833.0",
     "chai": "^4.2.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
