--- a/package.json
+++ b/package.json
@@ -8,9 +8,6 @@
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/react-hooks": "^5.0.3",
-    "@testing-library/user-event": "^12.1.10",
     "aws-sdk": "^2.833.0",
     "chai": "^4.2.0",
     "prop-types": "^15.7.2",
@@ -58,6 +55,10 @@
     ]
   },
   "devDependencies": {
+    "@shelf/jest-dynamodb": "^1.7.0",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/react-hooks": "^5.0.3",
+    "@testing-library/user-event": "^12.1.10",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.18.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -73,6 +74,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "gh-pages": "^3.1.0",
     "husky": "^4.3.8",
+    "jest": "26.6.0",
     "lint-staged": "^10.5.3",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0"
