chore(package.json): add back in the predeploy script

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "lint-fix": "eslint ./src --fix",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "predeploy": "react-scripts build",
     "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "coverage": "react-scripts test --coverage",
