--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "aws-sdk": "^2.833.0",
     "chai": "^4.2.0",
-    "moment": "^2.29.1",
+    "dayjs": "^1.10.4",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
