chore(integrate.yml): update CI file

--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -20,10 +20,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node_version }}
-      - uses: actions/setup-node@v1
+        uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - name: Install Dependencies
+      - name: npm install, build and test
         run: |
           npm install
           npm run build --if-present
