--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -1,7 +1,7 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
+# This workflow will do a clean install of node dependencies, build the source code and run tests
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Whoopsies! CI
+name: Whoopsies! CI/CD
 
 on:
   push:
@@ -36,3 +36,10 @@ jobs:
           npm install
           npm run build --if-present
         # will add npm test when unit tests work again
+
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@releases/v3
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH: gh-pages
+          FOLDER: dist
