--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -35,8 +35,8 @@ jobs:
       - name: Set Environment Variables
         # the keys must be named this way for the create-react-app custom environment variables
         run: |
-          REACT_APP_AWS_SECRET_KEY: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          REACT_APP_AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          REACT_APP_AWS_SECRET_KEY = ${{ secrets.AWS_ACCESS_KEY_ID }}
+          REACT_APP_AWS_SECRET_ACCESS_KEY = ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
       - name: npm install, build and test
         run: |
