fix(integrate.yml): trying to set the GitHub Secrets to the react app custom environment variables

--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -33,10 +33,10 @@ jobs:
           aws-region: us-east-2
 
       - name: Set Environment Variables
-        # the keys must be named this way for the create-react-app custom environment variables
-        run: |
-          REACT_APP_AWS_SECRET_KEY = ${{ secrets.AWS_ACCESS_KEY_ID }}
-          REACT_APP_AWS_SECRET_ACCESS_KEY = ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        with:
+          # the keys must be named this way for the create-react-app custom environment variables
+          REACT_APP_AWS_SECRET_KEY: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          REACT_APP_AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
       - name: npm install, build and test
         run: |
