--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -33,6 +33,7 @@ jobs:
           aws-region: us-east-2
 
       - name: Set Environment Variables
+        run: echo "Setting environment variables"
         env:
           # the keys must be named this way for the create-react-app custom environment variables
           REACT_APP_AWS_SECRET_KEY: ${{ secrets.AWS_ACCESS_KEY_ID }}
