--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Set Environment Variables
         run: echo "Setting environment variables"
-        env:
+        with:
           # the keys must be named this way for the create-react-app custom environment variables
           REACT_APP_AWS_SECRET_KEY: ${{ secrets.AWS_ACCESS_KEY_ID }}
           REACT_APP_AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
