--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -32,10 +32,14 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-2
 
-      - name: npm install, build and test
-        run: |
+      # the keys must be named this way for the create-react-app custom environment variables
+      - name: Configure Environment Variables
+      - run: |
           REACT_APP_AWS_SECRET_KEY=${{ secrets.AWS_ACCESS_KEY_ID }}
           REACT_APP_AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+      - name: npm install, build and test
+        run: |
           npm install
           npm run build --if-present
         # will add npm test when unit tests work again
