--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -32,8 +32,11 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-2
 
-      # the keys must be named this way for the create-react-app custom environment variables
       - name: Configure Environment Variables
+        # the keys must be named this way for the create-react-app custom environment variables
+        env:
+          REACT_APP_AWS_SECRET_KEY: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          REACT_APP_AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
           REACT_APP_AWS_SECRET_KEY=${{ secrets.AWS_ACCESS_KEY_ID }}
           REACT_APP_AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
