--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -36,7 +36,7 @@ jobs:
         run: |
           npm install
           npm run build --if-present
-        # will add npm test when unit tests work again
+          npm test
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@releases/v3
